--- a/MSDS650/Week1/Assignment1_CharlesAlders.ipynb
+++ b/MSDS650/Week1/Assignment1_CharlesAlders.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "9        10                    GoldenEye (1995)     Action|Adventure|Thriller"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "9        1       919       4       978301368"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "9       10   F   35           1    95370"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "19    1          10    48067  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "(1000209, 10)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
        "4    1          10    48067  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
        "Name: rating, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
        "Name: rating, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1178,7 @@
        "Name: rating, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
        "Name: rating, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1420,7 @@
        "M    3.568879  753769"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1440,7 @@
        "1000209"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1512,7 @@
        "Name: rating, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
        "Name: rating, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1593,7 @@
        "array([ 1, 18, 25, 35, 45, 50, 56])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1638,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
        "<AxesSubplot:xlabel='age'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1715,36 +1715,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_ed447_row0_col1, #T_ed447_row0_col2, #T_ed447_row0_col3, #T_ed447_row1_col1, #T_ed447_row1_col2, #T_ed447_row1_col3, #T_ed447_row2_col1, #T_ed447_row2_col2, #T_ed447_row2_col3, #T_ed447_row3_col1, #T_ed447_row3_col2, #T_ed447_row3_col3, #T_ed447_row4_col1, #T_ed447_row4_col2, #T_ed447_row4_col3, #T_ed447_row5_col1, #T_ed447_row5_col2, #T_ed447_row5_col3, #T_ed447_row6_col1, #T_ed447_row6_col2, #T_ed447_row6_col3 {\n",
+       "#T_513b5_row0_col1, #T_513b5_row0_col2, #T_513b5_row0_col3, #T_513b5_row1_col1, #T_513b5_row1_col2, #T_513b5_row1_col3, #T_513b5_row2_col1, #T_513b5_row2_col2, #T_513b5_row2_col3, #T_513b5_row3_col1, #T_513b5_row3_col2, #T_513b5_row3_col3, #T_513b5_row4_col1, #T_513b5_row4_col2, #T_513b5_row4_col3, #T_513b5_row5_col1, #T_513b5_row5_col2, #T_513b5_row5_col3, #T_513b5_row6_col1, #T_513b5_row6_col2, #T_513b5_row6_col3 {\n",
        "  background-color: green;\n",
        "  background-color: red;\n",
        "}\n",
-       "#T_ed447_row1_col0 {\n",
+       "#T_513b5_row1_col0 {\n",
        "  background-color: red;\n",
        "}\n",
-       "#T_ed447_row6_col0 {\n",
+       "#T_513b5_row6_col0 {\n",
        "  background-color: green;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_ed447\">\n",
+       "<table id=\"T_513b5\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_ed447_level0_col0\" class=\"col_heading level0 col0\" colspan=\"4\">rating</th>\n",
+       "      <th id=\"T_513b5_level0_col0\" class=\"col_heading level0 col0\" colspan=\"4\">rating</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"blank level1\" >&nbsp;</th>\n",
-       "      <th id=\"T_ed447_level1_col0\" class=\"col_heading level1 col0\" >mean</th>\n",
-       "      <th id=\"T_ed447_level1_col1\" class=\"col_heading level1 col1\" >median</th>\n",
-       "      <th id=\"T_ed447_level1_col2\" class=\"col_heading level1 col2\" >min</th>\n",
-       "      <th id=\"T_ed447_level1_col3\" class=\"col_heading level1 col3\" >max</th>\n",
+       "      <th id=\"T_513b5_level1_col0\" class=\"col_heading level1 col0\" >mean</th>\n",
+       "      <th id=\"T_513b5_level1_col1\" class=\"col_heading level1 col1\" >median</th>\n",
+       "      <th id=\"T_513b5_level1_col2\" class=\"col_heading level1 col2\" >min</th>\n",
+       "      <th id=\"T_513b5_level1_col3\" class=\"col_heading level1 col3\" >max</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >age</th>\n",
@@ -1756,62 +1756,62 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed447_level0_row0\" class=\"row_heading level0 row0\" >1-17</th>\n",
-       "      <td id=\"T_ed447_row0_col0\" class=\"data row0 col0\" >3.549520</td>\n",
-       "      <td id=\"T_ed447_row0_col1\" class=\"data row0 col1\" >4.000000</td>\n",
-       "      <td id=\"T_ed447_row0_col2\" class=\"data row0 col2\" >1</td>\n",
-       "      <td id=\"T_ed447_row0_col3\" class=\"data row0 col3\" >5</td>\n",
+       "      <th id=\"T_513b5_level0_row0\" class=\"row_heading level0 row0\" >1-17</th>\n",
+       "      <td id=\"T_513b5_row0_col0\" class=\"data row0 col0\" >3.549520</td>\n",
+       "      <td id=\"T_513b5_row0_col1\" class=\"data row0 col1\" >4.000000</td>\n",
+       "      <td id=\"T_513b5_row0_col2\" class=\"data row0 col2\" >1</td>\n",
+       "      <td id=\"T_513b5_row0_col3\" class=\"data row0 col3\" >5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed447_level0_row1\" class=\"row_heading level0 row1\" >18-24</th>\n",
-       "      <td id=\"T_ed447_row1_col0\" class=\"data row1 col0\" >3.507573</td>\n",
-       "      <td id=\"T_ed447_row1_col1\" class=\"data row1 col1\" >4.000000</td>\n",
-       "      <td id=\"T_ed447_row1_col2\" class=\"data row1 col2\" >1</td>\n",
-       "      <td id=\"T_ed447_row1_col3\" class=\"data row1 col3\" >5</td>\n",
+       "      <th id=\"T_513b5_level0_row1\" class=\"row_heading level0 row1\" >18-24</th>\n",
+       "      <td id=\"T_513b5_row1_col0\" class=\"data row1 col0\" >3.507573</td>\n",
+       "      <td id=\"T_513b5_row1_col1\" class=\"data row1 col1\" >4.000000</td>\n",
+       "      <td id=\"T_513b5_row1_col2\" class=\"data row1 col2\" >1</td>\n",
+       "      <td id=\"T_513b5_row1_col3\" class=\"data row1 col3\" >5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed447_level0_row2\" class=\"row_heading level0 row2\" >25-34</th>\n",
-       "      <td id=\"T_ed447_row2_col0\" class=\"data row2 col0\" >3.545235</td>\n",
-       "      <td id=\"T_ed447_row2_col1\" class=\"data row2 col1\" >4.000000</td>\n",
-       "      <td id=\"T_ed447_row2_col2\" class=\"data row2 col2\" >1</td>\n",
-       "      <td id=\"T_ed447_row2_col3\" class=\"data row2 col3\" >5</td>\n",
+       "      <th id=\"T_513b5_level0_row2\" class=\"row_heading level0 row2\" >25-34</th>\n",
+       "      <td id=\"T_513b5_row2_col0\" class=\"data row2 col0\" >3.545235</td>\n",
+       "      <td id=\"T_513b5_row2_col1\" class=\"data row2 col1\" >4.000000</td>\n",
+       "      <td id=\"T_513b5_row2_col2\" class=\"data row2 col2\" >1</td>\n",
+       "      <td id=\"T_513b5_row2_col3\" class=\"data row2 col3\" >5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed447_level0_row3\" class=\"row_heading level0 row3\" >35-44</th>\n",
-       "      <td id=\"T_ed447_row3_col0\" class=\"data row3 col0\" >3.618162</td>\n",
-       "      <td id=\"T_ed447_row3_col1\" class=\"data row3 col1\" >4.000000</td>\n",
-       "      <td id=\"T_ed447_row3_col2\" class=\"data row3 col2\" >1</td>\n",
-       "      <td id=\"T_ed447_row3_col3\" class=\"data row3 col3\" >5</td>\n",
+       "      <th id=\"T_513b5_level0_row3\" class=\"row_heading level0 row3\" >35-44</th>\n",
+       "      <td id=\"T_513b5_row3_col0\" class=\"data row3 col0\" >3.618162</td>\n",
+       "      <td id=\"T_513b5_row3_col1\" class=\"data row3 col1\" >4.000000</td>\n",
+       "      <td id=\"T_513b5_row3_col2\" class=\"data row3 col2\" >1</td>\n",
+       "      <td id=\"T_513b5_row3_col3\" class=\"data row3 col3\" >5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed447_level0_row4\" class=\"row_heading level0 row4\" >45-49</th>\n",
-       "      <td id=\"T_ed447_row4_col0\" class=\"data row4 col0\" >3.638062</td>\n",
-       "      <td id=\"T_ed447_row4_col1\" class=\"data row4 col1\" >4.000000</td>\n",
-       "      <td id=\"T_ed447_row4_col2\" class=\"data row4 col2\" >1</td>\n",
-       "      <td id=\"T_ed447_row4_col3\" class=\"data row4 col3\" >5</td>\n",
+       "      <th id=\"T_513b5_level0_row4\" class=\"row_heading level0 row4\" >45-49</th>\n",
+       "      <td id=\"T_513b5_row4_col0\" class=\"data row4 col0\" >3.638062</td>\n",
+       "      <td id=\"T_513b5_row4_col1\" class=\"data row4 col1\" >4.000000</td>\n",
+       "      <td id=\"T_513b5_row4_col2\" class=\"data row4 col2\" >1</td>\n",
+       "      <td id=\"T_513b5_row4_col3\" class=\"data row4 col3\" >5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed447_level0_row5\" class=\"row_heading level0 row5\" >50-55</th>\n",
-       "      <td id=\"T_ed447_row5_col0\" class=\"data row5 col0\" >3.714512</td>\n",
-       "      <td id=\"T_ed447_row5_col1\" class=\"data row5 col1\" >4.000000</td>\n",
-       "      <td id=\"T_ed447_row5_col2\" class=\"data row5 col2\" >1</td>\n",
-       "      <td id=\"T_ed447_row5_col3\" class=\"data row5 col3\" >5</td>\n",
+       "      <th id=\"T_513b5_level0_row5\" class=\"row_heading level0 row5\" >50-55</th>\n",
+       "      <td id=\"T_513b5_row5_col0\" class=\"data row5 col0\" >3.714512</td>\n",
+       "      <td id=\"T_513b5_row5_col1\" class=\"data row5 col1\" >4.000000</td>\n",
+       "      <td id=\"T_513b5_row5_col2\" class=\"data row5 col2\" >1</td>\n",
+       "      <td id=\"T_513b5_row5_col3\" class=\"data row5 col3\" >5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ed447_level0_row6\" class=\"row_heading level0 row6\" >56+</th>\n",
-       "      <td id=\"T_ed447_row6_col0\" class=\"data row6 col0\" >3.766632</td>\n",
-       "      <td id=\"T_ed447_row6_col1\" class=\"data row6 col1\" >4.000000</td>\n",
-       "      <td id=\"T_ed447_row6_col2\" class=\"data row6 col2\" >1</td>\n",
-       "      <td id=\"T_ed447_row6_col3\" class=\"data row6 col3\" >5</td>\n",
+       "      <th id=\"T_513b5_level0_row6\" class=\"row_heading level0 row6\" >56+</th>\n",
+       "      <td id=\"T_513b5_row6_col0\" class=\"data row6 col0\" >3.766632</td>\n",
+       "      <td id=\"T_513b5_row6_col1\" class=\"data row6 col1\" >4.000000</td>\n",
+       "      <td id=\"T_513b5_row6_col2\" class=\"data row6 col2\" >1</td>\n",
+       "      <td id=\"T_513b5_row6_col3\" class=\"data row6 col3\" >5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fe72ad5af40>"
+       "<pandas.io.formats.style.Styler at 0x7fed3bad3640>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1906,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1936,7 @@
        "Name: occupation, dtype: object"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1986,7 @@
        "Name: rating, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
